Fixed vertical scrollbar position on sub column header is displayed and no secondary sheet

--- a/themes/claro/ColumnView.less
+++ b/themes/claro/ColumnView.less
@@ -681,6 +681,9 @@
 	.dojoxCalendarSubHeader {
 		top: @column-header-height + 3px;
 		display: block;
+	}
+	.dojoxCalendarVScrollBar {
+		top: @sheet-top-subcolumns;
 	}	
 		
 }
