--- a/themes/nihilo/ColumnView.less
+++ b/themes/nihilo/ColumnView.less
@@ -631,7 +631,9 @@
 		top: @column-header-height + 3px;
 		display: block;
 	}	
-		
+	.dojoxCalendarVScrollBar {
+		top: @sheet-top-subcolumns;
+	}	
 }
 
 .nihilo .dojoxCalendarColumnView.secondarySheet {
