--- a/themes/soria/ColumnView.less
+++ b/themes/soria/ColumnView.less
@@ -653,8 +653,10 @@
 	.dojoxCalendarSubHeader {
 		top: @column-header-height + 3px;
 		display: block;
-	}	
-		
+	}
+	.dojoxCalendarVScrollBar {
+		top: @sheet-top-subcolumns;
+	}
 }
 
 .soria .dojoxCalendarColumnView.secondarySheet {
