--- a/themes/tundra/ColumnView.less
+++ b/themes/tundra/ColumnView.less
@@ -634,7 +634,9 @@
 		top: @column-header-height + 3px;
 		display: block;
 	}	
-		
+	.dojoxCalendarVScrollBar {
+		top: @sheet-top-subcolumns;
+	}
 }
 
 .tundra .dojoxCalendarColumnView.secondarySheet {
